Add spring mvn plugin